--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 steps:
-- script: chmod +x hello.sh; .\hello.sh
+- script: echo Hello, world!
   displayName: 'Run a one-line script'
 
 - script: |
